# AI_Content_Factory

./: .env.example  .gitignore  AI_Shorts_Factory_Engineering_Specification.md  AI_Shorts_Factory_PRD_v1.md  AI_Shorts_Factory_PRD_v2.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily.yml  manual.yml  monthly.yml  reusable-validation.yml
app/: __init__.py  config.py  exceptions.py  main.py  orchestrator.py  runtime.py  types.py  youtube_auth.py
app/content/: __init__.py  factory.py  generation.py
app/logging/: __init__.py  logger.py  schema.py
app/prompts/: script_prompt.txt  topic_prompt.txt
app/providers/: __init__.py  base.py  gemini_omni_video_provider.py  gemini_provider.py  groq_provider.py  http.py  nvidia_provider.py  openrouter_video_provider.py  router.py  telegram_provider.py  veo_provider.py  video_diagnostics.py  youtube_provider.py
app/storage/: __init__.py  models.py  sqlite.py
app/storage/migrations/: __init__.py
app/utils/: __init__.py  jsonschema.py  retry.py
app/video/: __init__.py  factory.py  generation.py
docs/: architecture.md  decisions.md
tests/: conftest.py  test_config.py  test_content_generation.py  test_gemini_omni_video_provider.py  test_jsonschema.py  test_migrations.py  test_openrouter_video_provider.py  test_orchestrator.py  test_provider_router.py  test_repositories.py  test_retry.py  test_run_logging.py  test_text_providers.py  test_upload_and_notification_providers.py  test_veo_provider.py  test_youtube_auth.py
