[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shorts-factory"
version = "0.1.0"
description = "Cloud-first, provider-agnostic Hindi YouTube Shorts automation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "-ra --cov=app.content --cov=app.providers --cov=app.storage --cov=app.utils --cov-fail-under=90"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 88
target-version = ["py311"]
